@@ -466,9 +466,9 @@ _lfind
 _loaddll
 _lfind_s
 _local_unwind
-_localtime32_s
+; _localtime32_s replaced by emu
 _localtime64
-_localtime64_s
+; _localtime64_s replaced by emu
 _lock
 _locking
 _logb
